--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: cggm
-Title: What the Package Does (One Line, Title Case)
+Title: Clustered Gaussian Graphical Model via Symmetric Convex Clustering
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Edmond", "Sanou", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: Clustered Gaussian Graphical Model via Symmetric Convex Clustering, 
+Tianyi Yao; Genevera I. Allen
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
